--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -23,6 +23,8 @@
     "drizzle-zod": "^0.5.1",
     "esbuild-register": "^3.4.2",
     "pg": "^8.11.5",
-    "postgres": "^3.3.5"
+    "postgres": "^3.3.5",
+    "zod": "^3.22.4",
+    "config": "workspace:*"
   }
 }
