--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -17,6 +17,7 @@
   "private": true,
   "dependencies": {
     "@vercel/postgres": "^0.8.0",
+    "config": "workspace:*",
     "dotenv": "^16.3.1",
     "drizzle-kit": "^0.20.17",
     "drizzle-orm": "^0.30.9",
@@ -24,7 +25,6 @@
     "esbuild-register": "^3.4.2",
     "pg": "^8.11.5",
     "postgres": "^3.3.5",
-    "zod": "^3.22.4",
-    "config": "workspace:*"
+    "zod": "^3.23.8"
   }
 }
