--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@clerk/elements": "^0.3.0",
     "@clerk/nextjs": "^5.0.3",
     "@hookform/resolvers": "^3.3.4",
+    "@internationalized/date": "^3.5.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -38,9 +39,11 @@
     "next-safe-action": "^6.2.0",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-aria": "^3.33.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-stately": "^3.31.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
