--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "studio": "pnpm --filter=db studio",
     "db-push": "pnpm --filter=db db-push",
     "move": "pnpm --filter=mover move",
-    "shadcnadd":"cd apps/web && pnpm dlx shadcn-ui@latest add"
+    "shadcnadd": "cd apps/web && pnpm dlx shadcn-ui@latest add"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "turbo": "1.12.5"
   },
-  "packageManager": "pnpm@8.9.0",
+  "packageManager": "pnpm@8.9.0+sha512.ef8859938e1f0537b9fcf0309044311392f3b38b344176e6cd4fdee21b225524b0ac2a1b08ae2ae2ddd5b3ff4b8ca496d6778e950f3e7c9f555b81325982441c",
   "engines": {
     "node": ">=20"
   },
